style: implemented fonts and colors variable

--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -4,6 +4,9 @@
 
 body {
   height: 100vh;
+  font-family:
+    Golos Text,
+    sans-serif;
 }
 
 @layer base {
@@ -33,12 +36,12 @@ body {
     --chart-4: 43 74% 66%;
     --chart-5: 27 87% 67%;
     --radius: 0.5rem;
-    --sidebar-background: 0 0% 98%;
-    --sidebar-foreground: 240 5.3% 26.1%;
+    --sidebar-background: #016b7b;
+    --sidebar-foreground: #ffffff;
     --sidebar-primary: 240 5.9% 10%;
     --sidebar-primary-foreground: 0 0% 98%;
     --sidebar-accent: 240 4.8% 95.9%;
-    --sidebar-accent-foreground: 240 5.9% 10%;
+    --sidebar-accent-foreground: #10384f;
     --sidebar-border: 220 13% 91%;
     --sidebar-ring: 217.2 91.2% 59.8%;
   }
