--- a/src/app/styles/globals.css
+++ b/src/app/styles/globals.css
@@ -5,9 +5,8 @@
 @theme {
   --text-xm: 10px;
 
-  --font-sans: var(--font-sans), sans-serif;
-  --font-mono: var(--font-mono), monospace;
-  --font-inter: Inter, sans-serif;
+  --breakpoint-3xl: 120rem;
+  --breakpoint-4xl: 160rem;
   --font-golos-text: Golos Text, sans-serif;
 
   --radius-lg: var(--radius);
@@ -38,16 +37,26 @@
   --color-destructive: hsl(var(--destructive));
   --color-destructive-foreground: hsl(var(--destructive-foreground));
 
+  --color-yellow-100: #fff8dd;
+  --color-yellow-200: #ccb243;
+
+  --color-red-100: #fdd4d4;
+  --color-red-500: #f42829;
   --color-red-550: #df3e3e;
 
+  --color-blue-100: #ccd8ff;
   --color-blue-400: #4e75ff;
   --color-blue-600: #3344de;
+  --color-blue-700: #003cff;
   --color-blue-950: #10384f;
 
   --color-teal: #016b7b;
+  --color-green-100: #d2fbf0;
+  --color-green-400: #18ba92;
 
   --color-neutral-50: #f6f7fa;
   --color-neutral-100: #f6f6f6;
+  --color-neutral-110: #e8e8ea;
   --color-neutral-150: #f9f9f9;
   --color-neutral-200: #e5e7eb;
   --color-neutral-250: #edeeee;
@@ -58,6 +67,7 @@
   --color-neutral-550: #77757f;
   --color-neutral-700: #3e4450;
   --color-neutral-850: #262626;
+  --color-neutral-860: #34303e;
   --color-neutral-950: #1d1929;
 
   --color-border: hsl(var(--border));
@@ -80,24 +90,6 @@
   --color-sidebar-ring: hsl(var(--sidebar-ring));
 }
 
-/*
-  The default border color has changed to `currentColor` in Tailwind CSS v4,
-  so we've added these compatibility styles to make sure everything still
-  looks the same as it did with Tailwind CSS v3.
-
-  If we ever want to remove these styles, we need to add an explicit border
-  color utility to any element that depends on these defaults.
-*/
-@layer base {
-  *,
-  ::after,
-  ::before,
-  ::backdrop,
-  ::file-selector-button {
-    border-color: var(--color-gray-200, currentColor);
-  }
-}
-
 @layer utilities {
   body {
     height: 100vh;
@@ -115,6 +107,7 @@
   ::file-selector-button {
     border-color: var(--color-gray-200, currentColor);
   }
+
   :root {
     --background: 0 0% 100%;
     --foreground: 222.2 84% 4.9%;
@@ -150,6 +143,7 @@
     --sidebar-border: 220 13% 91%;
     --sidebar-ring: 217.2 91.2% 59.8%;
   }
+
   .dark {
     --background: 222.2 84% 4.9%;
     --foreground: 210 40% 98%;
