feat: create a new custom Icon component and change navigation items

--- a/src/app/styles/globals.css
+++ b/src/app/styles/globals.css
@@ -45,6 +45,7 @@
   --color-red-550: #df3e3e;
 
   --color-blue-100: #ccd8ff;
+  --color-blue-200: #dae5ff;
   --color-blue-400: #4e75ff;
   --color-blue-600: #3344de;
   --color-blue-700: #003cff;
