refactor: add new admin sidebar menus and refactored sidebar menus(add collapsible)

--- a/src/app/styles/globals.css
+++ b/src/app/styles/globals.css
@@ -1,5 +1,7 @@
 @import 'tailwindcss';
 
+@custom-variant dark (&:is(.dark *));
+
 @plugin 'tailwindcss-animate';
 
 @theme {
@@ -182,5 +184,14 @@
 
   .card-title {
     @apply font-semibold leading-normal text-neutral-850;
+  }
+}
+
+@layer base {
+  * {
+    @apply border-border outline-ring/50;
+  }
+  body {
+    @apply bg-background text-foreground;
   }
 }
