--- a/src/app/styles/globals.css
+++ b/src/app/styles/globals.css
@@ -182,6 +182,11 @@
     --sidebar-ring: 217.2 91.2% 59.8%;
   }
 
+  html,
+  #root {
+    height: 100%;
+  }
+
   .card-title {
     @apply font-semibold leading-normal text-neutral-850;
   }
