--- a/src/app/styles/globals.css
+++ b/src/app/styles/globals.css
@@ -100,6 +100,13 @@
       Golos Text,
       sans-serif;
   }
+  .no-scrollbar::-webkit-scrollbar {
+    display: none;
+  }
+  .no-scrollbar {
+    -ms-overflow-style: none;
+    scrollbar-width: none;
+  }
 }
 
 @layer base {
